Merge build items to traverse the application graph only once.